убрал ссыки в галерее oksy mathews

--- a/sites/2) oksy Gym/index.html
+++ b/sites/2) oksy Gym/index.html
@@ -585,81 +585,73 @@
 			<img src="img/says-circle.png">
 		</div>
 	</section>
-
-
-
-
-
+	<!-- gallery-section -->
 	<section class="gallery-section1 gallery-section">
 		<div class="container">
 			<div class="gallery-title title">
 				<h2>Галерея</h2>
 			</div>
 			<div class="gallery-wrapper gallery-wrapper1">
+				<!-- gallery-box -->
 				<div class="gallery-box">
 					<div class="gallery-left">
-						<a href="img/gallery-img1.jpg" class="gallery-imga"><img src="img/gallery-img1.png"></a>
+						<img src="img/gallery-img1.png">
 					</div>
 					<div class="gallery-quad">
 						<div class="gallery-quad_row">
 							<div class="gallery-item">
-								<a href="img/gallery-img2.jpg" class="gallery-imga"><img src="img/gallery-img2.png"></a>
+								<img src="img/gallery-img2.png">
 							</div>
 							<div class="gallery-item">
-								<a href="img/gallery-img3.jpg" class="gallery-imga"><img src="img/gallery-img3.png"></a>
+								<img src="img/gallery-img3.png">
 							</div>
 						</div>
 						<div class="gallery-quad_row">
 							<div class="gallery-item">
-								<a href="img/gallery-img4.jpg" class="gallery-imga"><img src="img/gallery-img4.png"></a>
+								<img src="img/gallery-img4.png">
 							</div>
 							<div class="gallery-item">
-								<a href="img/gallery-img5.jpg" class="gallery-imga"><img src="img/gallery-img5.png"></a>
+								<img src="img/gallery-img5.png">
 							</div>
 						</div>
 					</div>
 				</div>
-
-
+				<!-- gallery-box -->
 				<div class="gallery-box">
 					<div class="gallery-left">
-						<a href="img/gallery-img6.jpg" class="gallery-imga"><img src="img/gallery-img6.png"></a>
+						<img src="img/gallery-img6.png">
 					</div>
 					<div class="gallery-quad">
 						<div class="gallery-quad_row">
 							<div class="gallery-item">
-								<a href="img/gallery-img7.jpg" class="gallery-imga"><img src="img/gallery-img7.png"></a>
+								<img src="img/gallery-img7.png">
 							</div>
 							<div class="gallery-item">
-								<a href="img/gallery-img8.jpg" class="gallery-imga"><img src="img/gallery-img8.png"></a>
+								<img src="img/gallery-img8.png">
 							</div>
 						</div>
 						<div class="gallery-quad_row">
 							<div class="gallery-item">
-								<a href="img/gallery-img9.jpg" class="gallery-imga"><img src="img/gallery-img9.png"></a>
+								<img src="img/gallery-img9.png">
 							</div>
 							<div class="gallery-item">
-								<a href="img/gallery-img10.jpg" class="gallery-imga"><img
-										src="img/gallery-img10.png"></a>
+								<img src="img/gallery-img10.png">
 							</div>
 						</div>
 					</div>
 				</div>
-
-
+				<!-- gallery-box -->
 				<div class="gallery-box">
 					<div class="gallery-left">
-						<a href="img/gallery-img11.jpg" class="gallery-imga"><img src="img/gallery-img11.png"></a>
+						<img src="img/gallery-img11.png">
 					</div>
 					<div class="gallery-quad">
 						<div class="gallery-quad_row">
 							<div class="gallery-item">
-								<a href="img/gallery-img12.jpg" class="gallery-imga"><img
-										src="img/gallery-img12.png"></a>
+								<img src="img/gallery-img12.png">
 							</div>
 							<div class="gallery-item">
-								<a href="img/gallery-img13.jpg" class="gallery-imga"><img
-										src="img/gallery-img13.png"></a>
+								<img src="img/gallery-img13.png">
 							</div>
 						</div>
 						<div class="gallery-quad_row">
@@ -668,74 +660,60 @@
 										src="img/gallery-img14.png"></a>
 							</div>
 							<div class="gallery-item">
-								<a href="img/gallery-img15.jpg" class="gallery-imga"><img
-										src="img/gallery-img15.png"></a>
+								<img src="img/gallery-img15.png">
 							</div>
 						</div>
 					</div>
 				</div>
-
-
+				<!-- gallery-box -->
 				<div class="gallery-box">
 					<div class="gallery-left">
-						<a href="img/gallery-img16.jpg" class="gallery-imga"><img src="img/gallery-img16.png"></a>
+						<img src="img/gallery-img16.png">
 					</div>
 					<div class="gallery-quad">
 						<div class="gallery-quad_row">
 							<div class="gallery-item">
-								<a href="img/gallery-img17.jpg" class="gallery-imga"><img
-										src="img/gallery-img17.png"></a>
+								<img src="img/gallery-img17.png">
 							</div>
 							<div class="gallery-item">
-								<a href="img/gallery-img18.jpg" class="gallery-imga"><img
-										src="img/gallery-img18.png"></a>
+								<img src="img/gallery-img18.png">
 							</div>
 						</div>
 						<div class="gallery-quad_row">
 							<div class="gallery-item">
-								<a href="img/gallery-img19.jpg" class="gallery-imga"><img
-										src="img/gallery-img19.png"></a>
+								<img src="img/gallery-img19.png">
 							</div>
 							<div class="gallery-item">
-								<a href="img/gallery-img20.jpg" class="gallery-imga"><img
-										src="img/gallery-img20.png"></a>
+								<img src="img/gallery-img20.png">
 							</div>
 						</div>
 					</div>
 				</div>
-
-
+				<!-- galley-box -->
 				<div class="gallery-box">
 					<div class="gallery-left">
-						<a href="img/gallery-img21.jpg" class="gallery-imga"><img src="img/gallery-img21.png"></a>
+						<img src="img/gallery-img21.png">
 					</div>
 					<div class="gallery-quad">
 						<div class="gallery-quad_row">
 							<div class="gallery-item">
-								<a href="img/gallery-img22.jpg" class="gallery-imga"><img
-										src="img/gallery-img22.png"></a>
+								<img src="img/gallery-img22.png">
 							</div>
 							<div class="gallery-item">
-								<a href="img/gallery-img23.jpg" class="gallery-imga"><img
-										src="img/gallery-img23.png"></a>
+								<img src="img/gallery-img23.png">
 							</div>
 						</div>
 						<div class="gallery-quad_row">
 							<div class="gallery-item">
-								<a href="img/gallery-img24.jpg" class="gallery-imga"><img
-										src="img/gallery-img24.png"></a>
+								<img src="img/gallery-img24.png">
 							</div>
 							<div class="gallery-item">
-								<a href="img/gallery-img25.jpg" class="gallery-imga"><img
-										src="img/gallery-img25.png"></a>
+								<img src="img/gallery-img25.png">
 							</div>
 						</div>
 					</div>
 				</div>
-
-
-
-
+				<!-- gallery-box -->
 				<div class="gallery-box">
 					<div class="gallery-left">
 						<a href="img/gallery-img26.jpg" class="gallery-imga"><img src="img/gallery-img26.png"></a>
@@ -743,41 +721,34 @@
 					<div class="gallery-quad">
 						<div class="gallery-quad_row">
 							<div class="gallery-item">
-								<a href="img/gallery-img27.jpg" class="gallery-imga"><img
-										src="img/gallery-img27.png"></a>
+								<img src="img/gallery-img27.png">
 							</div>
 							<div class="gallery-item">
-								<a href="img/gallery-img28.jpg" class="gallery-imga"><img
-										src="img/gallery-img28.png"></a>
+								<img src="img/gallery-img28.png">
 							</div>
 						</div>
 						<div class="gallery-quad_row">
 							<div class="gallery-item">
-								<a href="img/gallery-img29.jpg" class="gallery-imga"><img
-										src="img/gallery-img29.png"></a>
+								<img src="img/gallery-img29.png">
 							</div>
 							<div class="gallery-item">
-								<a href="img/gallery-img30.jpg" class="gallery-imga"><img
-										src="img/gallery-img30.png"></a>
+								<img src="img/gallery-img30.png">
 							</div>
 						</div>
 					</div>
 				</div>
-
-
+				<!-- gallery-box -->
 				<div class="gallery-box">
 					<div class="gallery-left">
-						<a href="img/gallery-img31.jpg" class="gallery-imga"><img src="img/gallery-img31.png"></a>
+						<img src="img/gallery-img31.png">
 					</div>
 					<div class="gallery-quad">
 						<div class="gallery-quad_row">
 							<div class="gallery-item">
-								<a href="img/gallery-img32.jpg" class="gallery-imga"><img
-										src="img/gallery-img32.png"></a>
+								<img src="img/gallery-img32.png">
 							</div>
 							<div class="gallery-item">
-								<a href="img/gallery-img33.jpg" class="gallery-imga"><img
-										src="img/gallery-img33.png"></a>
+								<img src="img/gallery-img33.png">
 							</div>
 						</div>
 					</div>
@@ -786,9 +757,6 @@
 		</div>
 	</section>
 
-
-
-
 	<section class="gallery-section2 gallery-section">
 		<div class="container">
 			<div class="gallery-title title">
@@ -796,115 +764,115 @@
 			</div>
 			<div class="gallery-wrapper gallery-wrapper2">
 				<div class="gallery-item">
-					<a href="img/gallery-img1.jpg" class="gallery-imga"><img src="img/gallery-img1.png"></a>
+					<img src="img/gallery-img1.png">
 				</div>
 				<div class="gallery-item">
-					<a href="img/gallery-img2.jpg" class="gallery-imga"><img src="img/gallery-img2.png"></a>
+					<img src="img/gallery-img2.png">
 				</div>
 				<div class="gallery-item">
-					<a href="img/gallery-img3.jpg" class="gallery-imga"><img src="img/gallery-img3.png"></a>
+					<img src="img/gallery-img3.png">
 				</div>
 				<div class="gallery-item">
-					<a href="img/gallery-img4.jpg" class="gallery-imga"><img src="img/gallery-img4.png"></a>
+					<img src="img/gallery-img4.png">
 				</div>
 				<div class="gallery-item">
-					<a href="img/gallery-img5.jpg" class="gallery-imga"><img src="img/gallery-img5.png"></a>
-				</div>
-
-				<div class="gallery-item">
-					<a href="img/gallery-img6.jpg" class="gallery-imga"><img src="img/gallery-img6.png"></a>
-				</div>
-				<div class="gallery-item">
-					<a href="img/gallery-img7.jpg" class="gallery-imga"><img src="img/gallery-img7.png"></a>
-				</div>
-				<div class="gallery-item">
-					<a href="img/gallery-img8.jpg" class="gallery-imga"><img src="img/gallery-img8.png"></a>
-				</div>
-				<div class="gallery-item">
-					<a href="img/gallery-img9.jpg" class="gallery-imga"><img src="img/gallery-img9.png"></a>
-				</div>
-				<div class="gallery-item">
-					<a href="img/gallery-img10.jpg" class="gallery-imga"><img src="img/gallery-img10.png"></a>
+					<img src="img/gallery-img5.png">
 				</div>
 
 				<div class="gallery-item">
-					<a href="img/gallery-img11.jpg" class="gallery-imga"><img src="img/gallery-img11.png"></a>
+					<img src="img/gallery-img6.png">
 				</div>
 				<div class="gallery-item">
-					<a href="img/gallery-img12.jpg" class="gallery-imga"><img src="img/gallery-img12.png"></a>
+					<img src="img/gallery-img7.png">
 				</div>
 				<div class="gallery-item">
-					<a href="img/gallery-img13.jpg" class="gallery-imga"><img src="img/gallery-img13.png"></a>
+					<img src="img/gallery-img8.png">
 				</div>
 				<div class="gallery-item">
-					<a href="img/gallery-img14.jpg" class="gallery-imga"><img src="img/gallery-img14.png"></a>
+					<img src="img/gallery-img9.png">
 				</div>
 				<div class="gallery-item">
-					<a href="img/gallery-img15.jpg" class="gallery-imga"><img src="img/gallery-img15.png"></a>
-				</div>
-
-				<div class="gallery-item">
-					<a href="img/gallery-img16.jpg" class="gallery-imga"><img src="img/gallery-img16.png"></a>
-				</div>
-				<div class="gallery-item">
-					<a href="img/gallery-img17.jpg" class="gallery-imga"><img src="img/gallery-img17.png"></a>
-				</div>
-				<div class="gallery-item">
-					<a href="img/gallery-img18.jpg" class="gallery-imga"><img src="img/gallery-img18.png"></a>
-				</div>
-				<div class="gallery-item">
-					<a href="img/gallery-img19.jpg" class="gallery-imga"><img src="img/gallery-img19.png"></a>
-				</div>
-				<div class="gallery-item">
-					<a href="img/gallery-img20.jpg" class="gallery-imga"><img src="img/gallery-img20.png"></a>
+					<img src="img/gallery-img10.png">
 				</div>
 
 				<div class="gallery-item">
-					<a href="img/gallery-img21.jpg" class="gallery-imga"><img src="img/gallery-img21.png"></a>
+					<img src="img/gallery-img11.png">
 				</div>
 				<div class="gallery-item">
-					<a href="img/gallery-img22.jpg" class="gallery-imga"><img src="img/gallery-img22.png"></a>
+					<img src="img/gallery-img12.png">
 				</div>
 				<div class="gallery-item">
-					<a href="img/gallery-img23.jpg" class="gallery-imga"><img src="img/gallery-img23.png"></a>
+					<img src="img/gallery-img13.png">
 				</div>
 				<div class="gallery-item">
-					<a href="img/gallery-img24.jpg" class="gallery-imga"><img src="img/gallery-img24.png"></a>
+					<img src="img/gallery-img14.png">
 				</div>
 				<div class="gallery-item">
-					<a href="img/gallery-img25.jpg" class="gallery-imga"><img src="img/gallery-img25.png"></a>
-				</div>
-
-				<div class="gallery-item">
-					<a href="img/gallery-img26.jpg" class="gallery-imga"><img src="img/gallery-img26.png"></a>
-				</div>
-				<div class="gallery-item">
-					<a href="img/gallery-img27.jpg" class="gallery-imga"><img src="img/gallery-img27.png"></a>
-				</div>
-				<div class="gallery-item">
-					<a href="img/gallery-img28.jpg" class="gallery-imga"><img src="img/gallery-img28.png"></a>
-				</div>
-				<div class="gallery-item">
-					<a href="img/gallery-img29.jpg" class="gallery-imga"><img src="img/gallery-img29.png"></a>
-				</div>
-				<div class="gallery-item">
-					<a href="img/gallery-img30.jpg" class="gallery-imga"><img src="img/gallery-img30.png"></a>
+					<img src="img/gallery-img15.png">
 				</div>
 
 				<div class="gallery-item">
-					<a href="img/gallery-img31.jpg" class="gallery-imga"><img src="img/gallery-img31.png"></a>
+					<img src="img/gallery-img16.png">
 				</div>
 				<div class="gallery-item">
-					<a href="img/gallery-img32.jpg" class="gallery-imga"><img src="img/gallery-img32.png"></a>
+					<img src="img/gallery-img17.png">
 				</div>
 				<div class="gallery-item">
-					<a href="img/gallery-img33.jpg" class="gallery-imga"><img src="img/gallery-img33.png"></a>
+					<img src="img/gallery-img18.png">
 				</div>
 				<div class="gallery-item">
-					<a href="img/gallery-img34.jpg" class="gallery-imga"><img src="img/gallery-img34.png"></a>
+					<img src="img/gallery-img19.png">
 				</div>
 				<div class="gallery-item">
-					<a href="img/gallery-img35.jpg" class="gallery-imga"><img src="img/gallery-img35.png"></a>
+					<img src="img/gallery-img20.png">
+				</div>
+
+				<div class="gallery-item">
+					<img src="img/gallery-img21.png">
+				</div>
+				<div class="gallery-item">
+					<img src="img/gallery-img22.png">
+				</div>
+				<div class="gallery-item">
+					<img src="img/gallery-img23.png">
+				</div>
+				<div class="gallery-item">
+					<img src="img/gallery-img24.png">
+				</div>
+				<div class="gallery-item">
+					<img src="img/gallery-img25.png">
+				</div>
+
+				<div class="gallery-item">
+					<img src="img/gallery-img26.png">
+				</div>
+				<div class="gallery-item">
+					<img src="img/gallery-img27.png">
+				</div>
+				<div class="gallery-item">
+					<img src="img/gallery-img28.png">
+				</div>
+				<div class="gallery-item">
+					<img src="img/gallery-img29.png">
+				</div>
+				<div class="gallery-item">
+					<img src="img/gallery-img30.png">
+				</div>
+
+				<div class="gallery-item">
+					<img src="img/gallery-img31.png">
+				</div>
+				<div class="gallery-item">
+					<img src="img/gallery-img32.png">
+				</div>
+				<div class="gallery-item">
+					<img src="img/gallery-img33.png">
+				</div>
+				<div class="gallery-item">
+					<img src="img/gallery-img34.png">
+				</div>
+				<div class="gallery-item">
+					<img src="img/gallery-img35.png">
 				</div>
 			</div>
 		</div>
@@ -943,6 +911,21 @@
 						работы в команде. Девочки вместе приобщаются к культуре и учатся хорошим манерам.
 					</div>
 				</div>
+
+
+				<div class="spoiler">
+					<div class="spoiler-head">
+						Какой генератор выгоднее, бензиновый или дизельный?
+					</div>
+					<div class="spoiler-body">
+						Это допустимо лишь в отношении дизельного топлива. А вот бочку с бензином от
+						электрогенератора лучше убрать как можно дальше, потому что его пары легко
+						воспламеняемые.
+					</div>
+				</div>
+
+
+
 				<div class="spoiler-wrap animate__pulse wow animate__animated">
 					<div class="spoiler-head">Как можно оплатить занятие?</div>
 					<div class="spoiler-plus">
