oksy - почищен немного код, убран баг с якорями

--- a/sites/2) oksy Gym/index.html
+++ b/sites/2) oksy Gym/index.html
@@ -27,6 +27,7 @@
 </head>
 
 <body class="main-body">
+	<!-- header -->
 	<header>
 		<div class="container">
 			<div class="header-wrapper">
@@ -38,7 +39,7 @@
 						<li><a href="#advantages-section">Наши преимущества</a></li>
 						<li><a href="#about-section">О тренерах</a></li>
 						<li><a href="#contacts-section">Контакты</a></li>
-						<li><a class="menu-stock" href="stock.html">Акции</a></li>
+						<li><a class="menu-stock" href="#">Акции</a></li>
 					</ul>
 					<div class="header-info">
 						<div class="header-info_tel">
@@ -73,6 +74,7 @@
 			</div>
 		</div>
 	</header>
+	<!-- main -->
 	<section class="main-section">
 		<div class="container">
 			<div class="main-girl">
@@ -125,8 +127,7 @@
 			<img src="img/main-ring_small.png">
 		</div>
 	</section>
-
-
+	<!-- group -->
 	<section class="group-section">
 		<div class="container">
 			<div class="group-title2 title animate__backInRight wow animate__animated">
@@ -153,8 +154,7 @@
 			</div>
 		</div>
 	</section>
-
-
+	<!-- format -->
 	<section class="format-section">
 		<div class="format-bg-left">
 			<img src="img/format-bg-left.svg">
@@ -194,8 +194,6 @@
 						</div>
 					</div>
 				</div>
-
-
 				<div class="format-row">
 					<div class="format-item format-item--big animate__animated animate__flipInY wow">
 						<div class="format-item_name">
@@ -227,10 +225,7 @@
 			</div>
 		</div>
 	</section>
-
-
-
-
+	<!-- table -->
 	<section class="table-section">
 		<div class="container">
 			<div class="time-title title">
@@ -329,6 +324,7 @@
 			</div>
 		</div>
 	</section>
+	<!-- advantages -->
 	<section class="advantages-section" id="advantages-section">
 		<div class="container">
 			<div class="advantages-subtitle title">
@@ -434,6 +430,7 @@
 			</div>
 		</div>
 	</section>
+	<!-- comments -->
 	<section class="comments-section">
 		<div class="container">
 			<div class="comments-wrapper">
@@ -467,8 +464,7 @@
 			<img src="img/comments-bg1.svg">
 		</div>
 	</section>
-
-
+	<!-- about -->
 	<section class="about-section about-section1" id="about-section">
 		<div class="container">
 			<div class="about-wrapper">
@@ -484,7 +480,7 @@
 						<li>Участница Всероссийских и международных турниров по художественной гимнастике</li>
 					</ul>
 					<div class="about-btn btn">
-						<a href="trainer.html">Подробнее</a>
+						<a href="#">Подробнее</a>
 					</div>
 					<div class="about-left1_round">
 						<img src="img/about-left1_round.svg">
@@ -501,11 +497,6 @@
 			</div>
 		</div>
 	</section>
-
-
-
-
-
 	<section class="about-section about-section2">
 		<div class="container">
 			<div class="about-center-shadow">
@@ -540,7 +531,7 @@
 						</li>
 					</ul>
 					<div class="about-btn btn">
-						<a href="trainer.html">Подробнее</a>
+						<a href="#">Подробнее</a>
 					</div>
 					<div class="about-left1_round">
 						<img src="img/about-left1_round.svg">
@@ -549,11 +540,7 @@
 			</div>
 		</div>
 	</section>
-
-
-
-
-
+	<!-- says -->
 	<section class="says-section">
 		<div class="container">
 			<div class="says-wrapper">
@@ -585,7 +572,7 @@
 			<img src="img/says-circle.png">
 		</div>
 	</section>
-	<!-- gallery-section -->
+	<!-- gallery -->
 	<section class="gallery-section1 gallery-section">
 		<div class="container">
 			<div class="gallery-title title">
@@ -656,8 +643,7 @@
 						</div>
 						<div class="gallery-quad_row">
 							<div class="gallery-item">
-								<a href="img/gallery-img14.jpg" class="gallery-imga"><img
-										src="img/gallery-img14.png"></a>
+								<img src="img/gallery-img14.png">
 							</div>
 							<div class="gallery-item">
 								<img src="img/gallery-img15.png">
@@ -716,7 +702,7 @@
 				<!-- gallery-box -->
 				<div class="gallery-box">
 					<div class="gallery-left">
-						<a href="img/gallery-img26.jpg" class="gallery-imga"><img src="img/gallery-img26.png"></a>
+						<img src="img/gallery-img26.png">
 					</div>
 					<div class="gallery-quad">
 						<div class="gallery-quad_row">
@@ -756,7 +742,6 @@
 			</div>
 		</div>
 	</section>
-
 	<section class="gallery-section2 gallery-section">
 		<div class="container">
 			<div class="gallery-title title">
@@ -877,15 +862,7 @@
 			</div>
 		</div>
 	</section>
-
-
-
-
-
-
-
-
-
+	<!-- qa -->
 	<section class="qa-section">
 		<div class="qa-bg-left">
 			<img src="img/qa-bg-left.svg">
@@ -1039,16 +1016,7 @@
 			</div>
 		</div>
 	</section>
-
-
-
-
-
-
-
-
-
-
+	<!-- contacts -->
 	<section class="contacts-section" id="contacts-section">
 		<div class="container">
 			<div class="contacts-wrapper">
@@ -1085,6 +1053,7 @@
 			</div>
 		</div>
 	</section>
+	<!-- footer -->
 	<footer>
 		<div class="container">
 			<div class="footer-wrapper">
@@ -1106,10 +1075,7 @@
 			</div>
 		</div>
 	</footer>
-
-
-
-	<!-- Попапы -->
+	<!-- popup 1 -->
 	<div class="hidden">
 		<div class="popup-wrapper" id="popup-wrapper">
 			<div class="popup-close">
@@ -1126,17 +1092,14 @@
 			</div>
 			<div class="checkbox-wrapper">
 				<input type="checkbox" id="checkbox1" required value="">
-				<label for="checkbox1"><span>Я согласен на обработку персональных данных 
-и согласен с политикой конфиденциальности данного сайта.</span></label>
+				<label for="checkbox1"><span>Я согласен на обработку персональных данных и согласен с политикой конфиденциальности данного сайта.</span></label>
 			</div>
 			<div class="popup-btn btn">
 				<button>ОТПРАВИТЬ</button>
 			</div>
 		</div>
 	</div>
-
-
-
+	<!-- popup 2 -->
 	<div class="hidden">
 		<form class="popup-wrapper" id="popup-wrapper2" method="POST" action="mail.php">
 			<div class="popup-close">
@@ -1156,8 +1119,7 @@
 			</div>
 			<div class="checkbox-wrapper">
 				<input type="checkbox" id="checkbox1" required value="">
-				<label for="checkbox1"><span>Я согласен на обработку персональных данных 
-и согласен с политикой конфиденциальности данного сайта.</span></label>
+				<label for="checkbox1"><span>Я согласен на обработку персональных данных и согласен с политикой конфиденциальности данного сайта.</span></label>
 			</div>
 			<div class="popup-btn btn">
 				<button>ОТПРАВИТЬ</button>
