oksy - убраны большие фотки из слайдера

--- a/sites/2) oksy Gym/index.html
+++ b/sites/2) oksy Gym/index.html
@@ -749,9 +749,6 @@
 			</div>
 			<div class="gallery-wrapper gallery-wrapper2">
 				<div class="gallery-item">
-					<img src="img/gallery-img1.png">
-				</div>
-				<div class="gallery-item">
 					<img src="img/gallery-img2.png">
 				</div>
 				<div class="gallery-item">
@@ -764,9 +761,6 @@
 					<img src="img/gallery-img5.png">
 				</div>
 
-				<div class="gallery-item">
-					<img src="img/gallery-img6.png">
-				</div>
 				<div class="gallery-item">
 					<img src="img/gallery-img7.png">
 				</div>
@@ -781,9 +775,6 @@
 				</div>
 
 				<div class="gallery-item">
-					<img src="img/gallery-img11.png">
-				</div>
-				<div class="gallery-item">
 					<img src="img/gallery-img12.png">
 				</div>
 				<div class="gallery-item">
@@ -796,9 +787,6 @@
 					<img src="img/gallery-img15.png">
 				</div>
 
-				<div class="gallery-item">
-					<img src="img/gallery-img16.png">
-				</div>
 				<div class="gallery-item">
 					<img src="img/gallery-img17.png">
 				</div>
@@ -813,9 +801,6 @@
 				</div>
 
 				<div class="gallery-item">
-					<img src="img/gallery-img21.png">
-				</div>
-				<div class="gallery-item">
 					<img src="img/gallery-img22.png">
 				</div>
 				<div class="gallery-item">
@@ -828,9 +813,6 @@
 					<img src="img/gallery-img25.png">
 				</div>
 
-				<div class="gallery-item">
-					<img src="img/gallery-img26.png">
-				</div>
 				<div class="gallery-item">
 					<img src="img/gallery-img27.png">
 				</div>
@@ -845,19 +827,10 @@
 				</div>
 
 				<div class="gallery-item">
-					<img src="img/gallery-img31.png">
-				</div>
-				<div class="gallery-item">
 					<img src="img/gallery-img32.png">
 				</div>
 				<div class="gallery-item">
 					<img src="img/gallery-img33.png">
-				</div>
-				<div class="gallery-item">
-					<img src="img/gallery-img34.png">
-				</div>
-				<div class="gallery-item">
-					<img src="img/gallery-img35.png">
 				</div>
 			</div>
 		</div>
@@ -888,21 +861,6 @@
 						работы в команде. Девочки вместе приобщаются к культуре и учатся хорошим манерам.
 					</div>
 				</div>
-
-
-				<div class="spoiler">
-					<div class="spoiler-head">
-						Какой генератор выгоднее, бензиновый или дизельный?
-					</div>
-					<div class="spoiler-body">
-						Это допустимо лишь в отношении дизельного топлива. А вот бочку с бензином от
-						электрогенератора лучше убрать как можно дальше, потому что его пары легко
-						воспламеняемые.
-					</div>
-				</div>
-
-
-
 				<div class="spoiler-wrap animate__pulse wow animate__animated">
 					<div class="spoiler-head">Как можно оплатить занятие?</div>
 					<div class="spoiler-plus">
@@ -1021,9 +979,20 @@
 		<div class="container">
 			<div class="contacts-wrapper">
 				<div class="contacts-map">
+					<!--
 					<iframe
 						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2695.9624544168773!2d37.44106146659242!3d55.753201675154614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b5492cd1da0073%3A0x4760161cfc6ec927!2z0JrRgNGL0LvQsNGC0YHQutCw0Y8sIDIg0YHRgtGA0L7QtdC90LjQtSA1LCDQnNC-0YHQutCy0LAsIDEyMTU1Mg!5e0!3m2!1sru!2sru!4v1628661297444!5m2!1sru!2sru"
 						width="600" height="550" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+					-->
+					<!--
+					<div style="position:relative;overflow:hidden;"><a
+							href="https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps"
+							style="color:#eee;font-size:12px;position:absolute;top:0px;">Москва</a><a
+							href="https://yandex.ru/maps/213/moscow/house/krylatskaya_ulitsa_vl2s5/Z04YcgNjTkwEQFtvfXt0dXRrYw==/?ll=37.444004%2C55.754810&utm_medium=mapframe&utm_source=maps&z=19.42"
+							style="color:#eee;font-size:12px;position:absolute;top:14px;">Крылатская улица, вл2с5 —
+							Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/-/CCURnOVvpB" width="600"
+							height="550" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe>
+					</div>-->
 				</div>
 				<div class="contacts-content">
 					<div class="contacts-title title">
