--- a/sites/2) oksy Gym/index.html
+++ b/sites/2) oksy Gym/index.html
@@ -984,7 +984,7 @@
 						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2695.9624544168773!2d37.44106146659242!3d55.753201675154614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b5492cd1da0073%3A0x4760161cfc6ec927!2z0JrRgNGL0LvQsNGC0YHQutCw0Y8sIDIg0YHRgtGA0L7QtdC90LjQtSA1LCDQnNC-0YHQutCy0LAsIDEyMTU1Mg!5e0!3m2!1sru!2sru!4v1628661297444!5m2!1sru!2sru"
 						width="600" height="550" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 					-->
-					<!--
+
 					<div style="position:relative;overflow:hidden;"><a
 							href="https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps"
 							style="color:#eee;font-size:12px;position:absolute;top:0px;">Москва</a><a
@@ -992,7 +992,7 @@
 							style="color:#eee;font-size:12px;position:absolute;top:14px;">Крылатская улица, вл2с5 —
 							Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/-/CCURnOVvpB" width="600"
 							height="550" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe>
-					</div>-->
+					</div>
 				</div>
 				<div class="contacts-content">
 					<div class="contacts-title title">
