oksy - поправлена карта

--- a/sites/2) oksy Gym/index.html
+++ b/sites/2) oksy Gym/index.html
@@ -21,7 +21,6 @@
 	<!-- Animate CSS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 	<!-- Базовые стили CSS -->
-	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/media.css">
 </head>
@@ -985,7 +984,7 @@
 						width="600" height="550" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 					-->
 
-					<div style="position:relative;overflow:hidden;"><a
+					<div class="contacts-wrapper__script" style="position:relative;overflow:hidden;"><a
 							href="https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps"
 							style="color:#eee;font-size:12px;position:absolute;top:0px;">Москва</a><a
 							href="https://yandex.ru/maps/213/moscow/house/krylatskaya_ulitsa_vl2s5/Z04YcgNjTkwEQFtvfXt0dXRrYw==/?ll=37.444004%2C55.754810&utm_medium=mapframe&utm_source=maps&z=19.42"
@@ -993,33 +992,43 @@
 							Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/-/CCURnOVvpB" width="600"
 							height="550" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe>
 					</div>
-				</div>
-				<div class="contacts-content">
-					<div class="contacts-title title">
-						<h2>Контакты</h2>
-					</div>
-					<div class="contacts-phone">
-						<a href="#">+7 968 033-44-99</a>
-					</div>
-					<div class="contacts-mail">
-						<a href="#">oksy_gym@oksy-gym.ru</a>
-					</div>
-					<div class="contacts-text">
-						<span>Адрес зала:</span>
-						<p>
-							Москва, Улица Крылатская владение 2 строение 5
-						</p>
-					</div>
-					<div class="contacts-socials">
-						<ul class="footer-socials">
-							<li><a href="https://www.facebook.com/Gymnastics-by-Oksy-Mathews-145659090984151/"><img
-										src="img/facebook-icon.svg"></a></li>
-							<li><a href="https://vk.com/gymnasticsbyoksymathews"><img src="img/vk-icon.svg"></a></li>
-							<li><a href="https://instagram.com/oksy_gym"><img src="img/instagram-icon.svg"></a></li>
-						</ul>
-					</div>
+					<!--
+					<div style="position:relative;overflow:hidden;"><a
+							href="https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps"
+							style="color:#eee;font-size:12px;position:absolute;top:0px;">Москва</a><a
+							href="https://yandex.ru/maps/geo/moskva/53000094/?ll=37.625524%2C55.755669&utm_medium=mapframe&utm_source=maps&z=13.65"
+							style="color:#eee;font-size:12px;position:absolute;top:14px;">Москва —
+							Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/-/CCURnOwC~D" width="600"
+							height="550" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe>
+					</div>-->
 				</div>
 			</div>
+			<div class="contacts-content">
+				<div class="contacts-title title">
+					<h2>Контакты</h2>
+				</div>
+				<div class="contacts-phone">
+					<a href="#">+7 968 033-44-99</a>
+				</div>
+				<div class="contacts-mail">
+					<a href="#">oksy_gym@oksy-gym.ru</a>
+				</div>
+				<div class="contacts-text">
+					<span>Адрес зала:</span>
+					<p>
+						Москва, Улица Крылатская владение 2 строение 5
+					</p>
+				</div>
+				<div class="contacts-socials">
+					<ul class="footer-socials">
+						<li><a href="https://www.facebook.com/Gymnastics-by-Oksy-Mathews-145659090984151/"><img
+									src="img/facebook-icon.svg"></a></li>
+						<li><a href="https://vk.com/gymnasticsbyoksymathews"><img src="img/vk-icon.svg"></a></li>
+						<li><a href="https://instagram.com/oksy_gym"><img src="img/instagram-icon.svg"></a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
 		</div>
 	</section>
 	<!-- footer -->
