ef - убрана ссылка на видео

--- a/sites/3) ef/index.html
+++ b/sites/3) ef/index.html
@@ -155,7 +155,7 @@
 					</div>
 				</div>
 				<div class="comp__right">
-					<a href="#popup-video" class="popup-link comp__video">
+					<a href="#" class="comp__video">
 						<img src="img/comp-video.png">
 					</a>
 				</div>
