начал работу над видом с телефона

--- a/sites/1) new lex/index.html
+++ b/sites/1) new lex/index.html
@@ -22,6 +22,27 @@
 	<link rel="stylesheet" href="css/media.css">
 </head>
 
+
+
+
+<div class="yudevices">
+	<div class="yudevices__phone">
+		<iframe src="index_mobile.html"></iframe>
+		<!-- <img src="iphone.svg"> -->
+	</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
 <body>
 	<header class="header">
 		<div class="container">
