--- a/sites/4) fvoice/index.html
+++ b/sites/4) fvoice/index.html
@@ -28,6 +28,8 @@
 	<link rel="stylesheet" href="assets/components/ajaxform/css/default.css" type="text/css">
 </head>
 
+<a href="index.html" class="click">click</a>
+
 <body>
 	<section class="main-section">
 		<div class="container">
