добавлена сырая версия мобильной версии

--- a/sites/1) new lex/index.html
+++ b/sites/1) new lex/index.html
@@ -23,22 +23,17 @@
 </head>
 
 
-
-
 <div class="yudevices">
 	<div class="yudevices__phone">
 		<iframe src="index_mobile.html"></iframe>
-		<!-- <img src="iphone.svg"> -->
 	</div>
 </div>
-
-
-
-
-
-
-
-
+<div class="yuchoise">
+	<div class="yuchoise__item">
+		<img src="smartphone-call.png">
+		<span>Мобильная версия</span>
+	</div>
+</div>
 
 
 
