интерефейс портфолио вынесен в папку

--- a/sites/1) new lex/index.html
+++ b/sites/1) new lex/index.html
@@ -20,9 +20,9 @@
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/media.css">
+	<link rel="stylesheet" href="_portfolio interface/pi.css">
 </head>
-
-
+<!-- portfolio interface -->
 <div class="yudevices">
 	<div class="yudevices__phone">
 		<iframe src="index_mobile.html"></iframe>
@@ -30,13 +30,11 @@
 </div>
 <div class="yuchoise">
 	<div class="yuchoise__item">
-		<img src="smartphone-call.png">
+		<img src="_portfolio interface/smartphone-call.png">
 		<span>Мобильная версия</span>
 	</div>
 </div>
-
-
-
+<!-- portfolio interface -->
 
 <body>
 	<header class="header">
@@ -1290,6 +1288,7 @@
 	<script>new WOW().init();</script>
 	<!-- Базовые скрипты javascript -->
 	<script src="js/main.js"></script>
+	<script src="_portfolio interface/pi.js"></script>
 </body>
 
 </html>
