стилизован переключатель между версиями сайта

--- a/sites/1) new lex/index.html
+++ b/sites/1) new lex/index.html
@@ -29,10 +29,15 @@
 	</div>
 </div>
 <div class="yuchoise">
-	<div class="yuchoise__item">
-		<img src="_portfolio interface/smartphone-call.png">
-		<span>Мобильная версия</span>
+	<div class="yuchoise__item yuchoise__item--active">
+		<img src="_portfolio interface/desktop-icon.svg">
 	</div>
+	<div class="yuchoise__item">
+		<img src="_portfolio interface/smartphone-call.svg">
+	</div>
+</div>
+<div class="yuchoise__menu">
+	<img src="_portfolio interface/more.svg">
 </div>
 <!-- portfolio interface -->
 
