добавлен скрипт переключения

--- a/sites/1) new lex/index.html
+++ b/sites/1) new lex/index.html
@@ -29,10 +29,10 @@
 	</div>
 </div>
 <div class="yuchoise">
-	<div class="yuchoise__item yuchoise__item--active">
+	<div class="yuchoise__item yuchoise__item--desk yuchoise__item--active">
 		<img src="_portfolio interface/desktop-icon.svg">
 	</div>
-	<div class="yuchoise__item">
+	<div class="yuchoise__item yuchoise__item--mobile">
 		<img src="_portfolio interface/smartphone-call.svg">
 	</div>
 </div>
