osky - поправлены спойлеры

--- a/sites/2) oksy matthews/index.html
+++ b/sites/2) oksy matthews/index.html
@@ -944,9 +944,6 @@
 					<div class="spoiler-minus">
 						<img src="img/spoiler-minus.svg">
 					</div>
-					<div class="spoiler-minus">
-						<img src="img/spoiler-minus.svg">
-					</div>
 					<div class="spoiler-body">
 						Стоимость занятий — фиксированная. В случае болезни делаем перерасчёт по справке от врача.
 					</div>
@@ -1030,7 +1027,7 @@
 					<li><a href="https://instagram.com/oksy_gym"><img src="img/instagram-icon.svg"></a></li>
 				</ul>
 				<div class="footer-gasfort">
-					<span>Разработчик</span>
+					<span>Дизайн</span>
 					<div class="footer-gasfort_img">
 						<a href="http://gasfort.ru"><img src="img/gasfort.svg" alt="разработка от gasfort"></a>
 					</div>
