oksy - сделан спойлер

--- a/sites/2) oksy matthews/index.html
+++ b/sites/2) oksy matthews/index.html
@@ -39,9 +39,9 @@
 		<img src="_portfolio interface/smartphone-call.svg">
 	</div>
 </div>
-<div class="yuchoise__menu">
+<a href="../../index.html" target="_blank" class="yuchoise__menu">
 	<img src="_portfolio interface/more.svg">
-</div>
+</a>
 <!-- portfolio interface -->
 
 <body class="main-body">
