попытка обновить структуру

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="favicon.svg" type="image/x-icon">
-	<title>New Lex</title>
+	<title>Портфолио Юрия Романова</title>
 	<!-- Slick slider CSS -->
 	<link rel="stylesheet" href="libs/slick-slider/slick.css">
 	<!-- Magnific Popup CSS -->
