заменено название папки портфолио интерфейс

--- a/sites/1) new lex/index.html
+++ b/sites/1) new lex/index.html
@@ -20,7 +20,7 @@
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/media.css">
-	<link rel="stylesheet" href="_portfolio interface/pi.css">
+	<link rel="stylesheet" href="_portfolio-interface/pi.css">
 </head>
 <!-- portfolio interface -->
 <div class="yudevices">
@@ -30,14 +30,14 @@
 </div>
 <div class="yuchoise">
 	<div class="yuchoise__item yuchoise__item--desk yuchoise__item--active">
-		<img src="_portfolio interface/desktop-icon.svg">
+		<img src="_portfolio-interface/desktop-icon.svg">
 	</div>
 	<div class="yuchoise__item yuchoise__item--mobile">
-		<img src="_portfolio interface/smartphone-call.svg">
+		<img src="_portfolio-interface/smartphone-call.svg">
 	</div>
 </div>
 <div class="yuchoise__menu">
-	<img src="_portfolio interface/more.svg">
+	<img src="_portfolio-interface/more.svg">
 </div>
 <!-- portfolio interface -->
 
@@ -1293,7 +1293,7 @@
 	<script>new WOW().init();</script>
 	<!-- Базовые скрипты javascript -->
 	<script src="js/main.js"></script>
-	<script src="_portfolio interface/pi.js"></script>
+	<script src="_portfolio-interface/pi.js"></script>
 </body>
 
 </html>
